--- a/online-help-96-97/task_creating_mirror_vault_relationship_from_source_svm.adoc
+++ b/online-help-96-97/task_creating_mirror_vault_relationship_from_source_svm.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: create, mirror, vault, relationship, source, svm, online, help, system, manager
 summary: "You can use System Manager to create a mirror and vault relationship from the source storage virtual machine (SVM). Creating this relationship enables you to better protect your data by periodically transferring data from the source volume to the destination volume. This relationship also enables you to retain data for long periods by creating backups of the source volume."
 ---
-= Create a mirror and vault relationship from a source SVM
+= Create a mirror and vault relationship from a source SVM with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create a mirror and vault relationship from the source storage virtual machine (SVM). Creating this relationship enables you to better protect your data by periodically transferring data from the source volume to the destination volume. This relationship also enables you to retain data for long periods by creating backups of the source volume.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create a mirror and vault relationship from the source storage virtual machine (SVM). Creating this relationship enables you to better protect your data by periodically transferring data from the source volume to the destination volume. This relationship also enables you to retain data for long periods by creating backups of the source volume.
 
 .Before you begin
 
