--- a/online-help-96-97/task_restoring_volume_from_snapshot_copy.adoc
+++ b/online-help-96-97/task_restoring_volume_from_snapshot_copy.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: restore, volume, snapshot, copy, system, manager, online, help
 summary: "You can use System Manager to restore a volume to a state that is recorded in a previously created Snapshot copy to retrieve lost information. When you restore a volume from a Snapshot copy, the restore operation overwrites the existing volume configuration. Any changes that were made to the data in the volume after the Snapshot copy was created are lost."
 ---
-= Restoring a volume from a Snapshot copy
+= Restore a volume from a Snapshot copy with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to restore a volume to a state that is recorded in a previously created Snapshot copy to retrieve lost information. When you restore a volume from a Snapshot copy, the restore operation overwrites the existing volume configuration. Any changes that were made to the data in the volume after the Snapshot copy was created are lost.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to restore a volume to a state that is recorded in a previously created Snapshot copy to retrieve lost information. When you restore a volume from a Snapshot copy, the restore operation overwrites the existing volume configuration. Any changes that were made to the data in the volume after the Snapshot copy was created are lost.
 
 .Before you begin
 
