--- a/online-help-96-97/task_assigning_volumes_to_storage_qos.adoc
+++ b/online-help-96-97/task_assigning_volumes_to_storage_qos.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: assign, volumes, storage, qos, online, help, flexgroup, online, help, quality, serice
 summary: "You can limit the throughput of FlexVol volumes and FlexGroup volumes by assigning them to storage Quality of Service (QoS) policy groups. You can assign storage QoS for new volumes, or you can modify the storage QoS details of the volumes that are already assigned to a policy group by using System Manager."
 ---
-= Assigning volumes to Storage QoS
+= Assign volumes to Storage QoS with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can limit the throughput of FlexVol volumes and FlexGroup volumes by assigning them to storage Quality of Service (QoS) policy groups. You can assign storage QoS for new volumes, or you can modify the storage QoS details of the volumes that are already assigned to a policy group by using System Manager.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier ) to limit the throughput of FlexVol volumes and FlexGroup volumes by assigning them to storage Quality of Service (QoS) policy groups. You can assign storage QoS for new volumes, or you can modify the storage QoS details of the volumes that are already assigned to a policy group by using System Manager.
 
 .About this task
 
