--- a/online-help-96-97/task_changing_status_volume.adoc
+++ b/online-help-96-97/task_changing_status_volume.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: flexvol, change, status, volume, online, help, system, manager
 summary: "You can use System Manager to change the status of a FlexVol volume when you want to take a volume offline, bring a volume back online, or restrict access to a volume."
 ---
-= Changing the status of a volume
+= Change the status of a volume with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to change the status of a FlexVol volume when you want to take a volume offline, bring a volume back online, or restrict access to a volume.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to change the status of a FlexVol volume when you want to take a volume offline, bring a volume back online, or restrict access to a volume.
 
 .Before you begin
 
