--- a/online-help-96-97/task_changing_tiering_policy_volume_destination_topic_delete.adoc
+++ b/online-help-96-97/task_changing_tiering_policy_volume_destination_topic_delete.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: change, tiering, policy, system, manager, volume, online, help
 summary: "You can use System Manager to change the default tiering policy of a volume to control whether the data of the volume is moved to the cloud tier when the data becomes inactive."
 ---
-= Changing the tiering policy of a volume
+= Change the tiering policy of a volume with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to change the default tiering policy of a volume to control whether the data of the volume is moved to the cloud tier when the data becomes inactive.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to change the default tiering policy of a volume to control whether the data of the volume is moved to the cloud tier when the data becomes inactive.
 
 .Steps
 
