--- a/online-help-96-97/task_creating_mirror_relationship_from_source_volume.adoc
+++ b/online-help-96-97/task_creating_mirror_relationship_from_source_volume.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: create, mirror, relationship, source, lvm, system, manager, online, help
 summary: "You can use System Manager to create a mirror relationship from the source storage virtual machine (SVM), and to assign a mirror policy and schedule to the mirror relationship. The mirror copy enables quick availability of data if the data on the source volume is corrupted or lost."
 ---
-= Create a mirror relationship from a source SVM
+= Create a mirror relationship from a source SVM with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create a mirror relationship from the source storage virtual machine (SVM), and to assign a mirror policy and schedule to the mirror relationship. The mirror copy enables quick availability of data if the data on the source volume is corrupted or lost.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create a mirror relationship from the source storage virtual machine (SVM), and to assign a mirror policy and schedule to the mirror relationship. The mirror copy enables quick availability of data if the data on the source volume is corrupted or lost.
 
 .Before you begin
 
