--- a/online-help-96-97/task_creating_snapshot_copies_outside_defined_schedule.adoc
+++ b/online-help-96-97/task_creating_snapshot_copies_outside_defined_schedule.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: create, snapshot, copy, outside, defined, schedule, online, help, system, manager
 summary: "You can use System Manager to create a Snapshot copy of a volume outside a defined schedule to capture the state of the file system at a specific point in time."
 ---
-= Create Snapshot copies outside a defined schedule
+= Create Snapshot copies outside a defined schedule with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create a Snapshot copy of a volume outside a defined schedule to capture the state of the file system at a specific point in time.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create a Snapshot copy of a volume outside a defined schedule to capture the state of the file system at a specific point in time.
 
 .About this task
 
