--- a/online-help-96-97/task_creating_vault_relationship_from_source_svm.adoc
+++ b/online-help-96-97/task_creating_vault_relationship_from_source_svm.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, online, help, vault, policy, relationship, create, source
 summary: "You can use System Manager to create a vault relationship from the source storage virtual machine (SVM), and to assign a vault policy to the vault relationship to create a backup vault. In the event of data loss or corruption on a system, backed-up data can be restored from the backup vault destination."
 ---
-= Create a vault relationship from a source SVM
+= Create a vault relationship from a source SVM with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create a vault relationship from the source storage virtual machine (SVM), and to assign a vault policy to the vault relationship to create a backup vault. In the event of data loss or corruption on a system, backed-up data can be restored from the backup vault destination.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create a vault relationship from the source storage virtual machine (SVM), and to assign a vault policy to the vault relationship to create a backup vault. In the event of data loss or corruption on a system, backed-up data can be restored from the backup vault destination.
 
 .Before you begin
 
