--- a/online-help-96-97/task_enabling_storage_efficiency_on_volume.adoc
+++ b/online-help-96-97/task_enabling_storage_efficiency_on_volume.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, enable, storage, efficiency, volume, deduplication, online, help
 summary: "You can use System Manager to enable storage efficiency and to configure both deduplication and data compression or only deduplication on a volume to save storage space. If you have not enabled storage efficiency when you created the volume, you can do so later by editing the volume."
 ---
-= Enabling storage efficiency on a volume
+= Enable storage efficiency on a volume with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to enable storage efficiency and to configure both deduplication and data compression or only deduplication on a volume to save storage space. If you have not enabled storage efficiency when you created the volume, you can do so later by editing the volume.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to enable storage efficiency and to configure both deduplication and data compression or only deduplication on a volume to save storage space. If you have not enabled storage efficiency when you created the volume, you can do so later by editing the volume.
 
 .Before you begin
 
