--- a/online-help-96-97/task_extending_expiry_date_snapshot_copies.adoc
+++ b/online-help-96-97/task_extending_expiry_date_snapshot_copies.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: extend, expiry, date, snapshot, copy, system, manager, online, help
 summary: "You can use System Manager to extend the expiry date of the Snapshot copies in a volume."
 ---
-= Extending the expiry date of Snapshot copies
+= Extend the expiry date of Snapshot copies with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to extend the expiry date of the Snapshot copies in a volume.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to extend the expiry date of the Snapshot copies in a volume.
 
 .Before you begin
 
