--- a/online-help-96-97/task_hiding_snapshot_copy_directory.adoc
+++ b/online-help-96-97/task_hiding_snapshot_copy_directory.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: hide, snapshot, copy, directory, system, manager, online, help
 summary: "You can use System Manager to hide the Snapshot copy directory (.snapshot) so that the Snapshot copy directory is not visible when you view your volume directories. By default, the .snapshot directory is visible."
 ---
-= Hiding the Snapshot copy directory
+= Hide the Snapshot copy directory with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to hide the Snapshot copy directory (`.snapshot`) so that the Snapshot copy directory is not visible when you view your volume directories. By default, the `.snapshot` directory is visible.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier)  to hide the Snapshot copy directory (`.snapshot`) so that the Snapshot copy directory is not visible when you view your volume directories. By default, the `.snapshot` directory is visible.
 
 .Steps
 
