--- a/online-help-96-97/task_moving_flexvol_volumes_between_aggregates_or_nodes.adoc
+++ b/online-help-96-97/task_moving_flexvol_volumes_between_aggregates_or_nodes.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: move, flexcol, volume, aggregate, node, online, help, system, manager
 summary: "You can nondisruptively move a FlexVol volume to a different aggregate or a different node for capacity utilization and improved performance by using System Manager."
 ---
-= Moving FlexVol volumes between aggregates or nodes
+= Move FlexVol volumes between aggregates or nodes with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can nondisruptively move a FlexVol volume to a different aggregate or a different node for capacity utilization and improved performance by using System Manager.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to nondisruptively move a FlexVol volume to a different aggregate or a different node for capacity utilization and improved performance.
 
 .Before you begin
 
@@ -42,3 +42,21 @@ For the exact values, you must navigate to the Aggregate window and view the det
 ====
 
 . Click *Move*.
+
+== Manually triggering the cutover for volume move
+
+For a volume move operation, you can use System Manager to manually trigger the cutover when the volume enters the cutover deferred phase. You can set the duration of the cutover and the cutover action to be performed by the system if the operation fails within that duration.
+
+.Steps
+
+. Click *Storage* > *SVMs*.
+. Select the SVM, and then click *SVM Settings*.
+. Click the *Volumes* tab.
+. Expand the volume for which the volume move operation has been initiated.
+. Click the *Show More Details* link to view more information about the volume.
+. In the *Overview* tab, click *Cutover*.
+. In the *Cutover* dialog box, click *Advanced Options*.
+. Specify the cutover action and the cutover window period.
+. Click *OK*.
+
+// sm-classic rework, 2022-04-12
