--- a/online-help-96-97/task_renaming_snapshot_copies.adoc
+++ b/online-help-96-97/task_renaming_snapshot_copies.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: rename, snapshot, copy, system, manager, online, help
 summary: "You can use System Manager to rename a Snapshot copy to help you organize and manage your Snapshot copies."
 ---
-= Renaming Snapshot copies
+= Rename Snapshot copies with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to rename a Snapshot copy to help you organize and manage your Snapshot copies.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to rename a Snapshot copy to help you organize and manage your Snapshot copies.
 
 .About this task
 
