--- a/online-help-96-97/task_scheduling_automatic_creation_snapshot_copies.adoc
+++ b/online-help-96-97/task_scheduling_automatic_creation_snapshot_copies.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: schedule, automatic, creation, snapshot, copy, online, help
 summary: "You can use System Manager to set up a schedule for the automatic creating automatic Snapshot copies of a volume. You can specify the time and frequency of creating the copies. You can also specify the number of Snapshot copies that are saved."
 ---
-= Scheduling automatic creation of Snapshot copies
+= Schedule automatic creation of Snapshot copies with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to set up a schedule for the automatic creating automatic Snapshot copies of a volume. You can specify the time and frequency of creating the copies. You can also specify the number of Snapshot copies that are saved.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to set up a schedule for the automatic creating automatic Snapshot copies of a volume. You can specify the time and frequency of creating the copies. You can also specify the number of Snapshot copies that are saved.
 
 .Steps
 
