--- a/online-help-96-97/concept_name_mapping.adoc
+++ b/online-help-96-97/concept_name_mapping.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: name, mapping, system, manager, specify, user, platform, online, help, command, button, rules
 summary: "You can use System Manager to specify name mapping entries to map users from different platforms."
 ---
-= Name mapping
+= Name mapping with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to specify name mapping entries to map users from different platforms.
+You can use You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to specify name mapping entries to map users from different platforms.
 
 == Name mapping conversion rules
 
