--- a/online-help-96-97/concept_roles_delete.adoc
+++ b/online-help-96-97/concept_roles_delete.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, create, manage, role, online, help, svm, edit
 summary: "You can use System Manager to create and manage roles."
 ---
-= Roles
+= Creating and managing roles with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create and manage roles.
+You can use You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create and manage roles.
 
 == Add roles
 
