--- a/online-help-96-97/concept_svm_user_accounts.adoc
+++ b/online-help-96-97/concept_svm_user_accounts.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, create, manage, online, help, storage, virtual, machine, svm, user, account, password, change, lock, unlock , command, button
 summary: "You can use System Manager to create and manage storage virtual machine (SVM) user accounts."
 ---
-= Users
+= Creating and managing storage virtual machine (SVM) user accounts with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create and manage storage virtual machine (SVM) user accounts.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create and manage storage virtual machine (SVM) user accounts.
 
 == Add SVM user accounts
 
