--- a/online-help-96-97/concept_unix.adoc
+++ b/online-help-96-97/concept_unix.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, unix, svm, online, help, command, button, group, tab, storage, virtual, machine
 summary: "You can use System Manager to maintain a list of local UNIX users and groups for each storage virtual machine (SVM)."
 ---
-= UNIX
+= Local UNIX users and groups with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to maintain a list of local UNIX users and groups for each storage virtual machine (SVM).
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to maintain a list of local UNIX users and groups for each storage virtual machine (SVM).
 
 == UNIX window
 
