--- a/online-help-96-97/task_creating_mirror_relationship_from_destination_svm.adoc
+++ b/online-help-96-97/task_creating_mirror_relationship_from_destination_svm.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: create, mirror, relationship, destination, svm, online, help, system, manager
 summary: "You can use ONTAP System Manager to create a mirror relationship from the destination storage virtual machine (SVM) and to assign a policy and schedule to the mirror relationship. The mirror copy enables quick availability of data if the data on the source volume is corrupted or lost."
 ---
-= Create a mirror relationship from a destination SVM
+= Create a mirror relationship from a destination SVM with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use ONTAP System Manager to create a mirror relationship from the destination storage virtual machine (SVM) and to assign a policy and schedule to the mirror relationship. The mirror copy enables quick availability of data if the data on the source volume is corrupted or lost.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create a mirror relationship from the destination storage virtual machine (SVM) and to assign a policy and schedule to the mirror relationship. The mirror copy enables quick availability of data if the data on the source volume is corrupted or lost.
 
 .Before you begin
 
