--- a/online-help-96-97/task_deleting_local_windows_user_account.adoc
+++ b/online-help-96-97/task_deleting_local_windows_user_account.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: delte, local, windows, user, account, system, manager, online, help, cifs, svm
 summary: "You can use System Manager to delete a local Windows user account from a storage virtual machine (SVM) if the user account is no longer required for local CIFS authentication to the CIFS server of the SVM or for determining access rights to the data contained in the SVM."
 ---
-= Deleting a local Windows user account
+= Deleting a local Windows user account with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to delete a local Windows user account from a storage virtual machine (SVM) if the user account is no longer required for local CIFS authentication to the CIFS server of the SVM or for determining access rights to the data contained in the SVM.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to delete a local Windows user account from a storage virtual machine (SVM) if the user account is no longer required for local CIFS authentication to the CIFS server of the SVM or for determining access rights to the data contained in the SVM.
 
 .About this task
 
