--- a/online-help-96-97/concept_options_for_resizing_volumes.adoc
+++ b/online-help-96-97/concept_options_for_resizing_volumes.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: option, resize, volume, wizard, snapshot, reserve, snapshot, copy, results, view, online, help
 summary: "You can use the Volume Resize wizard to change your volume size, adjust the Snapshot reserve, delete Snapshot copies, and dynamically view the results of your changes."
 ---
-= Options for resizing volumes
+= Options for resizing volumes with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the Volume Resize wizard to change your volume size, adjust the Snapshot reserve, delete Snapshot copies, and dynamically view the results of your changes.
+You can use the Volume Resize wizard in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to change your volume size, adjust the Snapshot reserve, delete Snapshot copies, and dynamically view the results of your changes.
 
 The Volume Resize wizard displays a bar graph that displays the current space allocations within the volume, including the amount of used and free space. When you make changes to the size or Snapshot reserve of the volume, this graph is updated dynamically to reflect the changes.
 
