--- a/online-help-96-97/task_changing_status_flexgroup_volume.adoc
+++ b/online-help-96-97/task_changing_status_flexgroup_volume.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: flexgroup, volume, status, change, online, help
 summary: "You can use System Manager to change the status of a FlexGroup volume when you want to take a FlexGroup volume offline, bring a FlexGroup volume back online, or restrict access to a FlexGroup volume."
 ---
-= Changing the status of a FlexGroup volume
+= Change the status of a FlexGroup volume with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to change the status of a FlexGroup volume when you want to take a FlexGroup volume offline, bring a FlexGroup volume back online, or restrict access to a FlexGroup volume.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to change the status of a FlexGroup volume when you want to take a FlexGroup volume offline, bring a FlexGroup volume back online, or restrict access to a FlexGroup volume.
 
 .About this task
 
