--- a/online-help-96-97/task_deleting_flexgroup_volumes.adoc
+++ b/online-help-96-97/task_deleting_flexgroup_volumes.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: delete, flexgroup, volumes, online, help, system, manager
 summary: "You can use System Manager to delete a FlexGroup volume when you no longer require the FlexGroup volume."
 ---
-= Deleting FlexGroup volumes
+= Delete FlexGroup volumes with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to delete a FlexGroup volume when you no longer require the FlexGroup volume.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to delete a FlexGroup volume when you no longer require the FlexGroup volume.
 
 .Before you begin
 
