--- a/online-help-96-97/task_renaming_metrocluster_local_site_a.adoc
+++ b/online-help-96-97/task_renaming_metrocluster_local_site_a.adoc
@@ -1,22 +1,4 @@
 ---
 permalink: online-help-96-97/task_renaming_metrocluster_local_site_a.html
-sidebar: sidebar
-keywords: system, manager, metrocluster, rename, local, site, cluster, online, help
-summary: "You can use System Manager to rename the MetroCluster local site (Site A) in a cluster."
+redirect: ontap-sm-classic/online-help-96-97/task_preparing_for_switchover_switchback_operations.html
 ---
-= Rename the MetroCluster local site (Site A) with System Manger - ONTAP 9.7 and earlier
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to rename the MetroCluster local site (Site A) in a cluster.
-
-.Steps
-
-. Click *Configuration* > *Configuration Updates*.
-. Click *Update cluster name*.
-. Update the name in the text box, then click *Submit*.
-+
-You can view the updated name when the MetroCluster Site A status is displayed.
-
-. To display the updated name of MetroCluster Site A when viewing it from the remote site (Site B), execute the following command within the CLI on the remote site (Site B): `cluster peer modify-local-name`
