--- a/online-help-96-97/task_resizing_flexgroup_volumes.adoc
+++ b/online-help-96-97/task_resizing_flexgroup_volumes.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, online, help, resize, flexgroup, volume, resources
 summary: "You can use System Manager to resize a FlexGroup volume by resizing existing resources or by adding new resources."
 ---
-= Resizing FlexGroup volumes
+= Resize FlexGroup volumes with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to resize a FlexGroup volume by resizing existing resources or by adding new resources.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to resize a FlexGroup volume by resizing existing resources or by adding new resources.
 
 .Before you begin
 
