--- a/online-help-96-97/task_specifying_advanced_options_for_flexgroup_volume.adoc
+++ b/online-help-96-97/task_specifying_advanced_options_for_flexgroup_volume.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: flexclone, volume, specify, advanced, create, options, online, help
 summary: "When you create a FlexGroup volume, you can specify options you want to associate with the FlexGroup volume."
 ---
-= Specifying advanced options for a FlexGroup volume
+= Specify advanced options for a FlexGroup volume with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-When you create a FlexGroup volume, you can specify options you want to associate with the FlexGroup volume.
+When you create a FlexGroup volume, you can use ONTAP System Manager classic (avaiable in ONTAP 9.7 and earlier) to specify options you want to associate with the FlexGroup volume.
 
 .Steps
 
