--- a/online-help-96-97/reference_application_specific_lun_settings.adoc
+++ b/online-help-96-97/reference_application_specific_lun_settings.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, oracle, sql, lun, application, specific, online, help
 summary: "System Manager supports Oracle, SQL, and other application types while creating FC SAN optimized LUNs on an AFF cluster. LUN settings such as the LUN size are determined by rules specific to the application type. For SQL and Oracle, LUN settings are automatically created."
 ---
-= Application-specific LUN settings
+= Application-specific LUN settings with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-System Manager supports Oracle, SQL, and other application types while creating FC SAN optimized LUNs on an AFF cluster. LUN settings such as the LUN size are determined by rules specific to the application type. For SQL and Oracle, LUN settings are automatically created.
+ONTAP System Manager classic (available in ONTAP 9.7 and earlier) supports Oracle, SQL, and other application types while creating FC SAN optimized LUNs on an AFF cluster. LUN settings such as the LUN size are determined by rules specific to the application type. For SQL and Oracle, LUN settings are automatically created.
 
 If your cluster contains two or more nodes, System Manager uses only the first two nodes selected by the API to create LUNs. Data aggregates are already created in each of the two nodes. The size of each volume created is equal to the available capacity of the aggregate. The volumes are thin-provisioned and space reservation is disabled on the LUNs.
 
