--- a/online-help-96-97/concept_luns.adoc
+++ b/online-help-96-97/concept_luns.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, manager, lun, access, cluster, tab, online, help
 summary: "You can use System Manager to manage LUNs."
 ---
-= LUNs
+= Manage LUNs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to manage LUNs.
+You can use ONTAP System Manager classic (available in ONTAP  9.7 and earlier) to manage LUNs.
 
 You can access all the LUNs in the cluster by using the LUNs tab or you can access the LUNs specific to the SVM by using *SVMs* > *LUNs*.
 
