--- a/online-help-96-97/reference_managing_svms.adoc
+++ b/online-help-96-97/reference_managing_svms.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: storage, virtual, machine, svm, administrator, system, manager, online, help
 summary: "A storage virtual machine (SVM) administrator can administer SVMs and their resources, such as volumes, protocols, and services, depending on the capabilities assigned by the cluster administrator. An SVM administrator cannot create, modify, or delete SVMs."
 ---
-= SVMs administrators in System Manager - ONTAP 9.7 and earlier
+= Manage SVMs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
