--- a/online-help-96-97/reference_svm_dashboard_window.adoc
+++ b/online-help-96-97/reference_svm_dashboard_window.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: svm, dashboard, detail, online, help
 summary: "The dashboard provides a cumulative at-a-glance information about your storage virtual machine (SVM) and its performance. You can use the Dashboard window to view important information related to your SVM such as the protocols configured, the volumes that are nearing capacity, and the performance."
 ---
-= SVM Dashboard window
+= SVM Dashboard window in System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-The dashboard provides a cumulative at-a-glance information about your storage virtual machine (SVM) and its performance. You can use the Dashboard window to view important information related to your SVM such as the protocols configured, the volumes that are nearing capacity, and the performance.
+The dashboard window in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) provides a cumulative at-a-glance information about your storage virtual machine (SVM) and its performance. You can use the Dashboard window to view important information related to your SVM such as the protocols configured, the volumes that are nearing capacity, and the performance.
 
 == SVM Details
 
