--- a/online-help-96-97/task_creating_fc_san_optimized_luns.adoc
+++ b/online-help-96-97/task_creating_fc_san_optimized_luns.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: create, fc, san, optimized, lun, system, manager, online, help
 summary: "You can use System Manager to create one or more FC SAN optimized LUNs during the initial setup of a cluster on an AFF platform."
 ---
-= Create FC SAN optimized LUNs
+= Create FC SAN optimized LUNs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create one or more FC SAN optimized LUNs during the initial setup of a cluster on an AFF platform.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create one or more FC SAN optimized LUNs during the initial setup of a cluster on an AFF platform.
 
 .Before you begin
 
