--- a/online-help-96-97/task_deleting_initiator_groups.adoc
+++ b/online-help-96-97/task_deleting_initiator_groups.adoc
@@ -1,27 +1,4 @@
 ---
 permalink: online-help-96-97/task_deleting_initiator_groups.html
-sidebar: sidebar
-keywords: delete, initiator, groups, system, manager, online, help
-summary: "You can use the Initiator Groups tab in System Manager to delete initiator groups."
+redirect: ontap-sm-classic/online-help-96-97/task_creating_initiator_groups.html
 ---
-= Deleting initiator groups
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use the Initiator Groups tab in System Manager to delete initiator groups.
-
-.Before you begin
-
-All the LUNs mapped to the initiator group must be manually unmapped.
-
-.Steps
-
-. Click *Storage* > *LUNs*.
-. In the *Initiator Groups* tab, select one or more initiator groups that you want to delete, and then click *Delete*.
-. Click *Delete*.
-. Verify that the initiator groups you deleted are no longer displayed in the *Initiator Groups* tab.
-
-*Related information*
-
-xref:reference_luns_window.adoc[LUNs window]
