--- a/online-help-96-97/task_deleting_luns.adoc
+++ b/online-help-96-97/task_deleting_luns.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: delete, lun, system, manager, online, help, aggregate
 summary: "You can use System Manager to delete LUNs and return the space used by the LUNs to their containing aggregates or volumes."
 ---
-= Deleting LUNs
+= Delete LUNs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to delete LUNs and return the space used by the LUNs to their containing aggregates or volumes.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to delete LUNs and return the space used by the LUNs to their containing aggregates or volumes.
 
 .Before you begin
 
