--- a/online-help-96-97/task_preparing_for_switchover_switchback_operations.adoc
+++ b/online-help-96-97/task_preparing_for_switchover_switchback_operations.adoc
@@ -24,7 +24,7 @@ Before you perform switchover operations using ONTAP System Manager classic 9.6,
  ** Both sites are operating with a two-node configuration (two nodes in each cluster). Sites with a single-node or four-node configuration are not supported for switchover and switchback operations using System Manager.
 . If you are launching the remote site (Site B) from the local site (Site A), ensure that Site B is running System Manager 9.6 or a later version.
 
-= Rename the MetroCluster local site (Site A) with System Manger - ONTAP 9.7 and earlier
+== Rename the MetroCluster local site (Site A) with System Manger - ONTAP 9.7 and earlier
 
 You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to rename the MetroCluster local site (Site A) in a cluster.
 
