--- a/online-help-96-97/task_viewing_flexclone_volumes_hierarchy.adoc
+++ b/online-help-96-97/task_viewing_flexclone_volumes_hierarchy.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: flexclone, volume, system, manager, parent, volume, online, help
 summary: "You can use System Manager to view the hierarchy of FlexClone volumes and their parent volumes."
 ---
-= Viewing the FlexClone volume hierarchy
+= View the FlexClone volume hierarchy - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to view the hierarchy of FlexClone volumes and their parent volumes.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to view the hierarchy of FlexClone volumes and their parent volumes.
 
 .Steps
 
