--- a/online-help-96-97/concept_lun_multiprotocol_type_guidelines.adoc
+++ b/online-help-96-97/concept_lun_multiprotocol_type_guidelines.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: guidelines, lun, multiprotocol, type, operating, system, host, layout, data, minimum, maximum, size, online, help
 summary: "The LUN multiprotocol type, or operating system type, specifies the operating system of the host accessing the LUN. It also determines the layout of data on the LUN, and the minimum and maximum size of the LUN."
 ---
-= Guidelines for using LUN multiprotocol type
+= Guidelines for using LUN multiprotocol type in System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-The LUN multiprotocol type, or operating system type, specifies the operating system of the host accessing the LUN. It also determines the layout of data on the LUN, and the minimum and maximum size of the LUN.
+In ONTAP System Manager classic (available in ONTAP 9.7 and earlier), the LUN multiprotocol type, or operating system type, specifies the operating system of the host accessing the LUN. It also determines the layout of data on the LUN, and the minimum and maximum size of the LUN.
 
 [NOTE]
 ====
