--- a/online-help-96-97/reference_luns_window.adoc
+++ b/online-help-96-97/reference_luns_window.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: online, help, lun, management, window, command, button, initiator, portset, group, online, help
 summary: "You can use the LUNs window to create and manage LUNs and to display information about LUNs. You can also add, edit, or delete initiator groups and initiator IDs."
 ---
-= LUNs window
+= LUNs window in System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the LUNs window to create and manage LUNs and to display information about LUNs. You can also add, edit, or delete initiator groups and initiator IDs.
+You can use the LUNs window in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create and manage LUNs and to display information about LUNs. You can also add, edit, or delete initiator groups and initiator IDs.
 
 == LUN Management tab
 
