--- a/online-help-96-97/task_bringing_luns_online.adoc
+++ b/online-help-96-97/task_bringing_luns_online.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: bring, lun, online, management, tab, online, help, system, manager
 summary: "You can use the LUN Management tab in System Manager to bring selected LUNs online and make them available to the host."
 ---
-= Bringing LUNs online
+= Bring LUNs online with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the *LUN Management* tab in System Manager to bring selected LUNs online and make them available to the host.
+You can use the *LUN Management* tab in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to bring selected LUNs online and make them available to the host.
 
 .Before you begin
 
