--- a/online-help-96-97/task_cloning_luns.adoc
+++ b/online-help-96-97/task_cloning_luns.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: clone, lun, create, multiple, copy, system, manager, online, help
 summary: "LUN clones enable you to create multiple readable and writable copies of a LUN. You can use System Manager to create a temporary copy of a LUN for testing or to make a copy of your data available to additional users without providing them access to the production data."
 ---
-= Cloning LUNs
+= Clone LUNs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-LUN clones enable you to create multiple readable and writable copies of a LUN. You can use System Manager to create a temporary copy of a LUN for testing or to make a copy of your data available to additional users without providing them access to the production data.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create a temporary copy of a LUN for testing or to make a copy of your data available to additional users without providing them access to the production data. LUN clones enable you to create multiple readable and writable copies of a LUN. 
 
 .Before you begin
 
