--- a/online-help-96-97/task_editing_initiator_groups.adoc
+++ b/online-help-96-97/task_editing_initiator_groups.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: edit, initiator, group, system, manager, online, help, port, set, dialog, box
 summary: "You can use the Edit Initiator Group dialog box in System Manager to change the name of an existing initiator group and its operating system. You can add initiators to or remove initiators from the initiator group. You can also change the portset associated with the initiator group."
 ---
-= Editing initiator groups
+= Edit initiator groups with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the Edit Initiator Group dialog box in System Manager to change the name of an existing initiator group and its operating system. You can add initiators to or remove initiators from the initiator group. You can also change the portset associated with the initiator group.
+You can use the *Edit Initiator Group* dialog box in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to change the name of an existing initiator group and its operating system. You can add initiators to or remove initiators from the initiator group. You can also change the portset associated with the initiator group.
 
 .Steps
 
