--- a/online-help-96-97/task_editing_initiators.adoc
+++ b/online-help-96-97/task_editing_initiators.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: edit, initiator, online, help, group, dialog, system, manager
 summary: "You can use the Edit Initiator Group dialog box in System Manager to change the name of an existing initiator in an initiator group."
 ---
-= Editing initiators
+= Edit initiators with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the Edit Initiator Group dialog box in System Manager to change the name of an existing initiator in an initiator group.
+You can use the *Edit Initiator Group* dialog box in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to change the name of an existing initiator in an initiator group.
 
 .Steps
 
