--- a/online-help-96-97/task_editing_luns.adoc
+++ b/online-help-96-97/task_editing_luns.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: edit, lun, properties, online, help, system, manager
 summary: "You can use the LUN properties dialog box in System Manager to change the name, description, size, space reservation setting, or the mapped initiator hosts of a LUN."
 ---
-= Editing LUNs
+= Edit LUNs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the LUN properties dialog box in System Manager to change the name, description, size, space reservation setting, or the mapped initiator hosts of a LUN.
+You can use the LUN properties dialog box in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to change the name, description, size, space reservation setting, or the mapped initiator hosts of a LUN.
 
 .About this task
 
