--- a/online-help-96-97/task_provisioning_storage_through_aggregates.adoc
+++ b/online-help-96-97/task_provisioning_storage_through_aggregates.adoc
@@ -152,7 +152,7 @@ a|
 
 The Flash Pool aggregate is created with the specified configuration, and is added to the list of aggregates in the Aggregates window.
 
-= Create a SnapLock aggregate manually with System Manager - ONTAP 9.7 and earlier
+== Create a SnapLock aggregate manually with System Manager - ONTAP 9.7 and earlier
 
 You can use System Manager classic (available in ONTAP 9.7 and earlier) to create a SnapLock Compliance aggregate or a SnapLock Enterprise aggregate manually. You can create SnapLock volumes on these aggregates, which provide "`write once, read many`" (WORM) capabilities.
 
@@ -205,7 +205,7 @@ For MetroCluster configurations, creating unmirrored aggregates is restricted. T
 By default, the mirroring option is disabled for SnapLock Compliance aggregates.
 . Click *Create*.
 
-= Create a FabricPool-enabled aggregate manually with System Manager - ONTAP 9.7 and earlier
+== Create a FabricPool-enabled aggregate manually with System Manager - ONTAP 9.7 and earlier
 
 You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create a FabricPool-enabled aggregate manually or to convert an existing SSD aggregate to a FabricPool-enabled aggregate by attaching a cloud tier to the SSD aggregate.
 
