--- a/online-help-96-97/task_viewing_initiator_groups.adoc
+++ b/online-help-96-97/task_viewing_initiator_groups.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: view, initiator, group, lun, system, manager, online, help
 summary: "You can use the Initiator Groups tab in System Manager to view all the initiator groups and the initiators mapped to these initiator groups, and the LUNs and LUN ID mapped to the initiator groups."
 ---
-= Viewing initiator groups
+= View initiator groups with System Manager  - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the Initiator Groups tab in System Manager to view all the initiator groups and the initiators mapped to these initiator groups, and the LUNs and LUN ID mapped to the initiator groups.
+You can use the *Initiator Groups* tab in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to view all the initiator groups and the initiators mapped to these initiator groups, and the LUNs and LUN ID mapped to the initiator groups.
 
 .Steps
 
