--- a/online-help-96-97/task_viewing_lun_information.adoc
+++ b/online-help-96-97/task_viewing_lun_information.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: view, lun, information, manangement, online, help
 summary: "You can use the LUN Management tab in System Manager to view details about a LUN, such as its name, status, size, and type."
 ---
-= Viewing LUN information
+= View LUN information with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the LUN Management tab in System Manager to view details about a LUN, such as its name, status, size, and type.
+You can use the *LUN Management* tab in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to view details about a LUN, such as its name, status, size, and type.
 
 .Steps
 
